Bug 1640408 - Check Unicode general category to identify punctuation marks in word-breaker. r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D77655